<resources>
    <string name="app_name">corocoro</string>
    <string name="appwidget_country">Korea</string>
    <string name="appwidget_confirmed">Confirmed: </string>
    <string name="appwidget_confirmed_count">9,887 (+101)</string>
    <string name="appwidget_recovered">Recovered: </string>
    <string name="appwidget_recovered_count">5,567 (+159)</string>
    <string name="appwidget_deaths">Deaths: </string>
    <string name="appwidget_deaths_count">165 (+3)</string>
    <string name="add_widget">Add widget</string>
</resources>
