<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/appwidget_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:contentDescription="@string/appwidget_country"
        android:text="@string/appwidget_country"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/appwidget_confirmed"
            android:layout_width="wrap_content"
            android:layout_margin="2dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:text="@string/appwidget_confirmed" />

        <TextView
            android:id="@+id/appwidget_confirmed_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/appwidget_confirmed_count"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/appwidget_recovered"
            android:layout_width="wrap_content"
            android:layout_margin="2dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:text="@string/appwidget_recovered" />

        <TextView
            android:id="@+id/appwidget_recovered_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/appwidget_recovered_count"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/appwidget_deaths"
            android:layout_width="wrap_content"
            android:layout_margin="2dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:text="@string/appwidget_deaths" />

        <TextView
            android:id="@+id/appwidget_deaths_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/appwidget_deaths_count"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>